--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,10 @@
+<script>
+    var host = "yoursite.com";
+    if ((host == window.location.host) && (window.location.protocol != "https:"))
+    window.location.protocol = "https";
+
+</script>
+
 <!DOCTYPE html>
 
 <html>
