--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <script>
-    var host = "yoursite.com";
+    var host = "gabrielwf.me";
     if ((host == window.location.host) && (window.location.protocol != "https:"))
     window.location.protocol = "https";
 
