--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 
 
 <!-- Image to hack wechat -->
-<img src="/img/avatar-ggabriel.png" width="0" height="0" />
+<img src="/img/avatar-gabriel.png" width="0" height="0" />
 <!-- Migrate from head to bottom, no longer block render and still work -->
 
 </body>
